# test-semantic-release

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
test_semantic_release/: __init__.py  script.py
test_semantic_release/tests/: test_import.py
