[tool.poetry]
name = "test-semantic-release"
version = "0.1.0"
description = ""
authors = ["Thomas Kuoch <kuoch.thomas@gmail.com>"]
readme = "README.md"
packages = [{ include = "test_semantic_release" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
emoji = "^2.9.0"
pytest = "^7.4.3"
pre-commit = "^3.6.0"
pyfinfrog-helpers = { version = "^0.5.0", source = "finfrog" }

[[tool.poetry.source]]
name = "finfrog"
url = "http://52.59.237.78:8080"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
